doc: documentation api swagger
